--- a/src/me_data_split.ipynb
+++ b/src/me_data_split.ipynb
@@ -2,52 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import torch\n",
-    "from datasets import load_dataset, Dataset\n",
-    "import pandas as pd\n",
-    "from transformers import (\n",
-    "    AutoModelForCausalLM,\n",
-    "    AutoModel,\n",
-    "    AutoTokenizer,\n",
-    "    BitsAndBytesConfig,\n",
-    "    HfArgumentParser,\n",
-    "    TrainingArguments,\n",
-    "    pipeline,\n",
-    "    logging,\n",
-    ")\n",
     "import random\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import re\n",
-    "import difflib\n",
-    "import json"
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 250124次点でのアノテーションデータ量\n",
     "ANNO_IDX = 435"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +168,7 @@
    ],
    "source": [
     "# データの読み込み\n",
-    "full_data = pd.read_csv(\"/data/group1/z40436a/ME/URL_Citation_Classification_Intermediate/data/all_data.csv\", encoding=\"utf-8\", usecols=['id', 'url', 'passage-title', 'citation-info', 'citation-paragraph', 'citation-type', 'role','type', 'year'], index_col=0)\n",
+    "full_data = pd.read_csv(\"../data/all_data.csv\", encoding=\"utf-8\", usecols=['id', 'url', 'passage-title', 'citation-info', 'citation-paragraph', 'citation-type', 'role','type', 'year'], index_col=0)\n",
     "full_data['tsunokake_id'] = full_data.index\n",
     "## 使用するのはRoleがMaterialとMethodであるもののみ\n",
     "choice_data = full_data.query(\"role == 'Method' | role == 'Material'\").reset_index().drop('id', axis=1)\n",
@@ -199,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +206,7 @@
        " np.int64(2021)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -277,15 +255,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({2019: 78, 2021: 78, 2020: 53, 2016: 42, 2017: 33, 2018: 29, 2014: 23, 2009: 15, 2006: 14, 2012: 13, 2015: 12, 2003: 8, 2005: 7, 2011: 7, 2008: 6, 2010: 6, 2004: 5, 2013: 3, 2007: 1, 2001: 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check years of train_df\n",
+    "print(Counter(train_df['year']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def split_years(lst, index, seed:int=0):\n",
+    "    if seed is not None:\n",
+    "        random.seed(seed)\n",
+    "\n",
+    "    # 各年号の出現回数をカウント\n",
+    "    year_counts = Counter(lst)\n",
+    "\n",
+    "    # 各年号から抽出可能な最大数\n",
+    "    max_count = min(year_counts.values())\n",
+    "\n",
+    "    # 各年号をバランスよく抽出できる最大数を計算\n",
+    "    total_balanced_count = max_count * len(year_counts)\n",
+    "\n",
+    "    if index > total_balanced_count:\n",
+    "        # raise ValueError(\"The specified INDEX exceeds the maximum balanced extraction limit.\")\n",
+    "        pass\n",
+    "\n",
+    "    # lst1にランダムに選ばれる要素のインデックスを格納\n",
+    "    lst1_indices = []\n",
+    "\n",
+    "    # 各年号から均等にインデックスを抽出\n",
+    "    for year in year_counts:\n",
+    "        year_indices = [i for i, y in enumerate(lst) if y == year]\n",
+    "        count_to_sample = min(index // len(year_counts), len(year_indices))\n",
+    "        lst1_indices.extend(random.sample(year_indices, count_to_sample))\n",
+    "\n",
+    "    # 残りのインデックスを補充\n",
+    "    remaining_count = index - len(lst1_indices)\n",
+    "    if remaining_count > 0:\n",
+    "        remaining_indices = [i for i in range(len(lst)) if i not in lst1_indices]\n",
+    "        lst1_indices.extend(random.sample(remaining_indices, remaining_count))\n",
+    "\n",
+    "    # lst2はlstからlst1の要素を除いたリストのインデックス\n",
+    "    lst2_indices = [i for i in range(len(lst)) if i not in lst1_indices]\n",
+    "\n",
+    "    return lst1_indices, lst2_indices\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 各年号が開発に含まれるように分割\n",
+    "dev_ids, train_ids = split_years(train_df['year'].to_list(), len(test_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[227, 231, 5, 225, 396, 395, 13, 12, 349, 176, 242, 118, 166, 18, 143, 62, 61, 297, 279, 90, 180, 331, 429, 320, 147, 196, 137, 68, 191, 293, 391, 47, 64, 220, 185, 350, 420, 81, 282, 370, 353, 85, 433, 354, 112, 121, 308, 141, 423, 123, 409, 211, 284, 335, 286, 312, 109, 332, 129, 139, 82, 318, 261, 51, 45, 187, 298, 285, 60, 175, 323, 170, 413, 72, 321, 195, 316, 117]\n",
+      "[0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 14, 15, 16, 17, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 63, 65, 66, 67, 69, 70, 71, 73, 74, 75, 76, 77, 78, 79, 80, 83, 84, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 110, 111, 113, 114, 115, 116, 119, 120, 122, 124, 125, 126, 127, 128, 130, 131, 132, 133, 134, 135, 136, 138, 140, 142, 144, 145, 146, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 167, 168, 169, 171, 172, 173, 174, 177, 178, 179, 181, 182, 183, 184, 186, 188, 189, 190, 192, 193, 194, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 212, 213, 214, 215, 216, 217, 218, 219, 221, 222, 223, 224, 226, 228, 229, 230, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 280, 281, 283, 287, 288, 289, 290, 291, 292, 294, 295, 296, 299, 300, 301, 302, 303, 304, 305, 306, 307, 309, 310, 311, 313, 314, 315, 317, 319, 322, 324, 325, 326, 327, 328, 329, 330, 333, 334, 336, 337, 338, 339, 340, 341, 342, 343, 344, 345, 346, 347, 348, 351, 352, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366, 367, 368, 369, 371, 372, 373, 374, 375, 376, 377, 378, 379, 380, 381, 382, 383, 384, 385, 386, 387, 388, 389, 390, 392, 393, 394, 397, 398, 399, 400, 401, 402, 403, 404, 405, 406, 407, 408, 410, 411, 412, 414, 415, 416, 417, 418, 419, 421, 422, 424, 425, 426, 427, 428, 430, 431, 432]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# インデックスの確認\n",
+    "print(dev_ids)\n",
+    "print(train_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({np.int64(2020): 7, np.int64(2021): 6, np.int64(2017): 6, np.int64(2019): 5, np.int64(2016): 5, np.int64(2018): 5, np.int64(2014): 4, np.int64(2009): 4, np.int64(2015): 4, np.int64(2012): 4, np.int64(2010): 4, np.int64(2006): 4, np.int64(2005): 3, np.int64(2004): 3, np.int64(2011): 3, np.int64(2013): 3, np.int64(2008): 3, np.int64(2003): 3, np.int64(2007): 1, np.int64(2001): 1})\n",
+      "Counter({np.int64(2019): 73, np.int64(2021): 72, np.int64(2020): 46, np.int64(2016): 37, np.int64(2017): 27, np.int64(2018): 24, np.int64(2014): 19, np.int64(2009): 11, np.int64(2006): 10, np.int64(2012): 9, np.int64(2015): 8, np.int64(2003): 5, np.int64(2005): 4, np.int64(2011): 4, np.int64(2008): 3, np.int64(2004): 2, np.int64(2010): 2})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 開発と学習の確認\n",
+    "dev_count = []\n",
+    "for id in dev_ids:\n",
+    "    dev_count.append(train_df['year'][id])\n",
+    "print(Counter(dev_count))\n",
+    "train_count = []\n",
+    "for id in train_ids:\n",
+    "    train_count.append(train_df['year'][id])\n",
+    "print(Counter(train_count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "# サイズチェック\n",
+    "if (len(dev_ids) == len(test_df)) and (len(train_ids) + len(dev_ids) + len(test_df) == len(train_df) + len(test_df)):\n",
+    "    print('ok')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/few_data_split/test_ids.txt', 'w') as test_idx_file:\n",
+    "    for test_id in test_df.index:\n",
+    "        test_idx_file.write(str(test_id)+'\\n')\n",
+    "\n",
+    "with open('../data/few_data_split/dev_ids.txt', 'w') as dev_idx_file:\n",
+    "    for dev_id in dev_ids:\n",
+    "        dev_idx_file.write(str(dev_id)+'\\n')\n",
+    "\n",
+    "with open('../data/few_data_split/train_ids.txt', 'w') as train_idx_file:\n",
+    "    for train_id in train_ids:\n",
+    "        train_idx_file.write(str(train_id)+'\\n')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ME_241211",
+   "display_name": "laptop_me",
    "language": "python",
    "name": "python3"
   },
