--- a/src/me_data_jsai_split.ipynb
+++ b/src/me_data_jsai_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +34,15 @@
     "import re\n",
     "import difflib\n",
     "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ANNO_IDX = 435"
    ]
   },
   {
@@ -254,7 +263,7 @@
     "# split train & test based on \"year\"\n",
     "## full test data = 317\n",
     "# test_df = choice_data[:ANNO_IDX-1].query(\"year==2021\")\n",
-    "train_df = choice_data.query(\"year<2021\")\n",
+    "train_df = choice_data[:ANNO_IDX-1].query(\"year<2021\")\n",
     "\n",
     "test_df = choice_data.query(\"year==2021\")\n",
     "# train_df = choice_data.query(\"year<2021\")\n",
